--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
          <version>2.8.2</version>
       </dependency>
 
+      <dependency>
+         <groupId>org.graphstream</groupId>
+         <artifactId>gs-core</artifactId>
+         <version>1.3</version>
+      </dependency>
+
    </dependencies>
 
    <build>
